[package]
authors = ["Arvinder Dhanoa <awsomearvinder@gmail.com>"]
edition = "2018"
name = "server"
version = "0.1.0"

[dependencies]
axum = "0.3.3"
dashmap = "4.0"
rand = "0.8.4"
serde_json = "1.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tokio]
features = ["net", "rt", "rt-multi-thread"]
version = "1.13.0"

[dependencies.uuid]
features = ["v4"]
version = "0.8"

[dependencies.tower-http]
version = "0.1"
features = ["cors"]